--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,41 @@
 @import "tailwindcss";
 
-@theme{
-    
-}
+    @font-face {
+        font-family: "Morabba Light";
+        src:url("../fonts/Morabba/woff2/Morabba-Light.woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Morabba Medium";
+        src:url("../fonts/Morabba/woff2/Morabba-Medium.woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Morabba Bold";
+        src:url("../fonts/Morabba/woff2/Morabba-Bold.woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Dana"; /*400*/
+        src:url("../fonts/Dana/woff2/DanaFaNum-Regular.woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Dana Medium"; /*500*/
+        src:url("../fonts/Dana/woff2/DanaFaNum-Medium.woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Dana DemiBold"; /*600*/
+        src:url("../fonts/Dana/woff2/DanaFaNum-DemiBold.woff2");
+        font-display: swap;
+    }
+
+    @theme {
+        --font-Dana:"Dana";
+        --font-Dana-Medium:"Dana Medium";
+        --font-Dana-DemiBold:"Dana DemiBold";
+        --font-Morabba-Light:"Morabba Light";
+        --font-Morabba-Medium:"Morabba Medium";
+        --font-Morabba-Bold:"Morabba Bold";
+    }
