feat :Implementing the shopping cart section and adding dark mode functionality

--- a/src/input.css
+++ b/src/input.css
@@ -39,5 +39,6 @@
         --font-Morabba-Medium:"Morabba Medium";
         --font-Morabba-Bold:"Morabba Bold";
         --tracking-tightest:-0.065em;
+}
 
-    }
+   @variant dark (&:where(.dark, .dark *));
